<resources>
    <string name="app_name">Circle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_denied">Circle已被禁止权限：SD卡写入</string>
    <string name="server_ip">http://10.29.17.3:8080/CircleServer/</string>
    <string name="content">content...</string>
    <string name="delivery_price">费用：</string>
    <string name="idle_name">物品名称：</string>
    <string name="idle_price">价格：</string>
    <string name="idle_detail">详细描述：</string>
    <string name="lost_label">类型：</string>
    <string name="lost_time">时间：</string>
    <string name="lost_location">地点：</string>
    <string name="lost_contact">联系方式：</string>
    <string name="lost_detail">更多信息：</string>
    <string name="delivery_content">跑腿任务：</string>
    <string name="data_hint">选择日期</string>
    <string name="time_hint">选择时间</string>
    <string name="hint_viewpoint">发表你的评论...</string>
    <string name="hint_question">发表你的校园话题...</string>
    <string name="hint_null_content">未找到该内容，或已被删除</string>
    <string name="hint_null_viewpoint">暂时没有评论</string>
    <string name="hint_null_contact">尚未有用户向您发送私信</string>
    <string name="hint_null_result">没有找到相关内容:(</string>
    <string name="my_homepage">个人主页</string>
    <string name="my_questions">我的话题</string>
    <string name="my_lost">我的寻物</string>
    <string name="my_idle">我的闲置</string>
    <string name="my_delivery">我的跑腿</string>
    <string name="my_collections">收藏夹</string>
    <string name="my_comments">我的评论</string>
    <string name="login_id">账号</string>
    <string name="login_password">密码</string>
    <string name="user_image">头像：</string>
    <string name="user_id">学号：</string>
    <string name="user_name">昵称：</string>
    <string name="user_department">院系：</string>
    <string name="user_major">专业：</string>
    <string name="user_words">留言：</string>
    <string name="footer_state_0">正在加载</string>
    <string name="footer_state_1">—— 我是有底线的 ——</string>
    <string name="menu_question">校园话题</string>
    <string name="menu_lost">寻物启事</string>
    <string name="menu_idle">闲置物品</string>
    <string name="menu_delivery">校园跑腿</string>
    <string name="menu_open">设为公开</string>
    <string name="menu_delete">删除</string>
    <string name="menu_hide">仅自己可见</string>
    <string name="menu_like">收藏</string>
    <string name="menu_report">举报</string>
    <string name="menu_setting">设置</string>
    <string name="menu_change">修改</string>
    <string name="menu_done">完成</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="old_password">原始密码：</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="title_new_collection">添加到收藏夹</string>
    <string name="title_password">密码仅支持数字、字母、小数点（.）及下划线（_）</string>
    <string name="title_report">请选择举报理由</string>
    <string name="radio_item_1">垃圾广告信息</string>
    <string name="radio_item_2">虚假欺诈信息</string>
    <string name="radio_item_3">色情、暴力、血腥等违法信息</string>
    <string name="radio_item_4">辱骂、歧视、挑衅等不友善行为</string>
    <string name="radio_item_5">其他原因</string>
    <string name="unread_viewpoint">查看未读评论</string>
    <string name="password_character">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ._</string>

    <string-array name="label_spinner">
        <item>校园话题</item>
        <item>寻物启事</item>
        <item>闲置物品</item>
        <item>校园跑腿</item>
    </string-array>

    <string-array name="time_spinner">
        <item>00:00—06:00</item>
        <item>06:00—12:00</item>
        <item>12:00—18:00</item>
        <item>18:00—24:00</item>
    </string-array>

</resources>
