<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_message"
        android:icon="@drawable/ic_search"
        android:title="search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/new_question"
        android:title="@string/menu_question"
        app:showAsAction="never"/>
    <item
        android:id="@+id/new_lost"
        android:title="@string/menu_lost"
        app:showAsAction="never"/>
    <item
        android:id="@+id/new_idle"
        android:title="@string/menu_idle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/new_delivery"
        android:title="@string/menu_delivery"
        app:showAsAction="never"/>

</menu>