<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_report"
        android:textSize="18sp"
        android:textColor="@color/colorTheme"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RadioButton
            android:id="@+id/item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_1" />
        
        <RadioButton
            android:id="@+id/item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_2"/>
        
        <RadioButton
            android:id="@+id/item_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_3"/>

        <RadioButton
            android:id="@+id/item_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_4"/>

        <RadioButton
            android:id="@+id/item_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_5"/>
        
    </RadioGroup>

</LinearLayout>